Corrections de typos et clarification transport

--- a/9. PLNE.tex
+++ b/9. PLNE.tex
@@ -570,7 +570,7 @@ Retour en 2.
 \begin{frame}
 \frametitle{Branchement}
 
-Plusieurs choix possibles du noeud duquel brancher.
+Plusieurs choix possibles du n\oe{}ud duquel brancher.
 
 \mbox{}
 
@@ -919,8 +919,7 @@ La borne inférieure est supérieure ou égale à $Z^*$.
 \item
 La relaxation PL n'a pas de solution réalisable.
 \item
-Dans la solution optimale de la relaxation PL, toutes les variables entières sont à valeurs entières: si la borne
-inférieure est strictement inférieure à $Z^*$, $Z^*$ est mise à jour et la solution de la relaxation PL devient la meilleure solution courante.
+Dans la solution optimale de la relaxation PL, toutes les variables entières sont à valeurs entières: si la valeur optimale du sous-problème est strictement inférieure à $Z^*$, $Z^*$ est mise à jour et la solution de la relaxation PL devient la meilleure solution courante.
 \end{enumerate}
 \item
 Retourner en 2.
@@ -1102,7 +1101,7 @@ $S_2$ est élagué, mais pas $S_1$. Seule la variable $x_2$ est non entière, au
 		& x_1 \geq 0, x_2 \geq 0
 	\end{align*}
 	
-	La solution est $(-7/2, 2)$, associée à la valeur de l'objecitf $-12$, qui devient la borne inférieure pour les problèmes issus de $S_3$.
+	La solution est $(7/2, 2)$, associée à la valeur de l'objecitf $-12$, qui devient la borne inférieure pour les problèmes issus de $S_3$.
 	
 \end{frame}
 
@@ -1122,7 +1121,7 @@ $S_2$ est élagué, mais pas $S_1$. Seule la variable $x_2$ est non entière, au
 
 Nous en déduisons immédiatement que $x_2^* = 3$, et de là,
 $$
-x_1^* = \min \{ 14/3, 9/2, 4 \} = 4.
+x_1^* = \min \{ 20/3, 9/2, 4 \} = 4.
 $$
 La solution est entière et donc réalisable pour le problème de départ, associée à la valeur de l'objectif -13, borne supérieure sur la valeur optimale. Nous élaguons.
 
@@ -1160,7 +1159,7 @@ La borne inférieure sur $S_3$ est supérieure à la borne supérieure sur la va
 \begin{frame}
 \frametitle{Exemple}
 
-Il n'y a plus de n\oe{}non élagués. Nous avons donc terminer.
+Il n'y a plus de n\oe{}ud non élagués. Nous avons donc terminer.
 
 \mbox{}
 
