--- a/11. Reseaux.tex
+++ b/11. Reseaux.tex
@@ -1,4 +1,4 @@
-\documentclass[usepdftitle=false]{beamer}
+\documentclass[usepdftitle=false, aspectratio=169]{beamer}
 
 \usepackage[utf8]{inputenc}
 
@@ -23,35 +23,7 @@
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
     \node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
 
-\def\ba{\boldsymbol{a}}
-\def\bb{\boldsymbol{b}}
-\def\bc{\boldsymbol{c}}
-\def\bd{\boldsymbol{d}}
-\def\be{\boldsymbol{e}}
-\def\br{\boldsymbol{r}}
-\def\bs{\boldsymbol{s}}
-\def\bu{\boldsymbol{u}}
-\def\bx{\boldsymbol{x}}
-\def\by{\boldsymbol{y}}
-\def\bz{\boldsymbol{z}}
-\def\bA{\boldsymbol{A}}
-\def\bB{\boldsymbol{B}}
-\def\bC{\boldsymbol{C}}
-\def\bD{\boldsymbol{D}}
-\def\bH{\boldsymbol{H}}
-\def\bI{\boldsymbol{I}}
-\def\bL{\boldsymbol{L}}
-\def\bM{\boldsymbol{M}}
-\def\bX{\boldsymbol{X}}
-\def\bU{\boldsymbol{U}}
-\def\bzero{\boldsymbol{0}}
-\def\bone{\boldsymbol{1}}
-\def\blambda{\boldsymbol{\lambda}}
-
-\def\cR{\mathcal{R}}
-\def\cT{\mathcal{T}}
-\def\RR{\cR}
-\def\NN{\mathcal{N}}
+\include{macros}
 
 \makeatletter
 \renewcommand*\env@matrix[1][c]{\hskip -\arraycolsep
