--- a/10. Transport.tex
+++ b/10. Transport.tex
@@ -271,7 +271,7 @@ est réalisable. En effet,
 De plus, $\forall i, j$,
 \begin{align*}
 0 \leq x_{ij} \leq a_i, \\
-0 \leq x_{ij} \leq a_j.
+0 \leq x_{ij} \leq b_j.
 \end{align*}
 Un programme avec un ensemble réalisable non vide fermé et borné (i.e. compact) a toujours une solution optimale.
 
