Corr. du pas de Newt. pour le calcul du centre an.

--- a/8. Points Interieurs.tex
+++ b/8. Points Interieurs.tex
@@ -1443,7 +1443,7 @@ le système devient
 
 Après réorganisation des équations, nous pouvons obtenir
 \begin{align*}
-	\Delta y &= (AHA^T)^{-1} (Ax - AHr_d )\\
+	\Delta y &= (AHA^T)^{-1} (-AS^{-1}\bsone - AHr_d )\\
 	\Delta s &= -A^T\Delta y - r_d \\
 	\Delta x &= -H\Delta s - x + S^{-1}\bsone
 \end{align*}
